# sensor-hub-custom

./: CMakeLists.txt  idf_component.yml
main/: CMakeLists.txt  config_manager.c  config_manager.h  main.c  sensor_manager.c  sensor_manager.h  uart_json.c  uart_json.h  web_ui.c  web_ui.h  zigbee_coordinator.c  zigbee_coordinator.h
